syntax = "proto3";
option java_package = "de.fhg.aisec.ids.idscp2.app_layer.messages";
option java_outer_classname = "AppLayer";

message AppLayerMessage {
  oneof message {
    GenericMessage genericMessage = 1;
    IdsMessage idsMessage = 2;
  }
}

message HeaderEntry {
  string name = 1;
  string value = 2;
}

message GenericMessage {
  // Arbitrary header string
  string header = 1;
  // The actual, generic message payload
  bytes payload = 2;
  // Additional headers
  repeated HeaderEntry extraHeaders = 3;
}

message IdsMessage {
  // Arbitrary header string
  string header = 1;
  // The actual, generic message payload
  bytes payload = 2;
  // Additional headers
  repeated HeaderEntry extraHeaders = 3;
}